--- a/view/settings.xaml
+++ b/view/settings.xaml
@@ -62,6 +62,33 @@
                 </ci:SettingsCard.Switcher>
             </ci:SettingsCard>
 
+            <ci:SettingsCard
+                Margin="0,0,0,6"
+                Description=" {NextPointTime}               距离下个时间点的剩余时间（可能为00:00:00.0） &#x000A; {ClassLeftTime}                距离上课的时间（可能为00:00:00.0） &#x000A; {BreakingLeftTime}          距离下课的时间（可能为00:00:00.0） &#x000A; {CurrentSubjectName}    当前的课程名  （当无课程时为“无课程”） &#x000A; {CurrentClassPlan}           当前的课表    （当此处为空时显示“noclass”）"
+                Header="数据格式示例"
+                IconGlyph="CogOutline">
+                <ci:SettingsCard.Switcher>
+                    <TextBox
+                        Width="0"
+                        Foreground="{DynamicResource MaterialDesignBody}"
+                        IsEnabled="False"
+                        Visibility="Hidden" />
+                </ci:SettingsCard.Switcher>
+            </ci:SettingsCard>
+
+            <ci:SettingsCard
+                x:Name="SETTING_DATAFORMAT"
+                Margin="0,0,0,6"
+                Description="示例见上"
+                Header="数据格式"
+                IconGlyph="CogOutline">
+                <ci:SettingsCard.Switcher>
+                    <TextBox
+                        Width="600"
+                        Foreground="{DynamicResource MaterialDesignBody}"
+                        Text="" />
+                </ci:SettingsCard.Switcher>
+            </ci:SettingsCard>
 
 
 
